--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.14.8",
     "@babel/node": "^7.14.7",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.14.8",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.12"
+  },
+  "dependencies": {
     "@babel/runtime": "^7.15.4",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
